[package]
name = "kvs"
version = "0.1.0"
authors = ["Yuki Saito <gperson22@gmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.0", features = ["yaml"]}
env_logger = "0.7.1"
log = "0.4.8"
failure = "0.1.6"
serde = "1.0.104"
serde_json = "1.0.48"
sled = "0.31.0" 

[dev-dependencies]
assert_cmd = "0.11.0"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
